voting sdmall, 42 facet_classic limit,cleanup nav, minor ux

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -246,6 +246,18 @@ template(name='voting')
     each downvoter_ids
         +user_info
 
+template(name='voting_small')
+    if points
+        strong #{points}
+    .ui.icon.button.upvote(title='upvote')
+        i.thumbs.up.icon(class=upvote_class)
+    //- each upvoter_ids
+    //-     +user_info
+    .ui.icon.button.downvote(title='downvote')
+        i.thumbs.down.icon(class=downvote_class)
+    //- each downvoter_ids
+    //-     +user_info
+
 
 
 template(name='voting_full')
