--- a/components/delta/model.jade
+++ b/components/delta/model.jade
@@ -6,9 +6,9 @@ template(name='model_edit')
                     h1.ui.header edit model #{title}
                     +creation_info
                     a.ui.huge.icon.basic.button(href="/m/#{slug}")
-                        i.big.checkmark.icon
+                        i.big.checkmark.green.icon
                     #delete_model.ui.icon.basic.button
-                        i.trash.icon
+                        i.trash.red.icon
                     .ui.form
                         +text_edit key='title' label='title' direct=true
                         +text_edit key='slug' label='slug' direct=true
