--- a/components/profile/profile.jade
+++ b/components/profile/profile.jade
@@ -26,8 +26,9 @@ template(name='user_layout')
                                 small @#{user.username}        
                     if user_is_resident
                         if is_staff
-                            a.ui.big.compact.icon.button.item(href="/user/#{user_from_username_param.username}/edit")
+                            a.ui.big.compact.button.item(href="/user/#{user_from_username_param.username}/edit")
                                 +i name='settings' classes='ui inline mini image'
+                                |edit
                             +resident_info         
                             +user_check_steps
                             +staff_verification
@@ -35,19 +36,23 @@ template(name='user_layout')
                             .ui.small.header #{tagline}
                 
                     if is_current_user
-                        a.ui.icon.large.button.item(href="/user/#{user_from_username_param.username}/edit" title='profile settings')
-                            +i name='settings'
+                        a.ui.large.button.item(href="/user/#{user_from_username_param.username}/edit" title='profile settings')
+                            +i name='settings' classes='ui inline mini image'
+                            |edit
                     else if is_admin
-                        a.ui.icon.large.button.item(href="/user/#{user_from_username_param.username}/edit" title='profile settings')
-                            +i name='settings'
+                        a.ui.large.button.item(href="/user/#{user_from_username_param.username}/edit" title='profile settings')
+                            +i name='settings' classes='ui inline mini image'
+                            |edit
                     //- else
                     //-     .ui.button.direct_message(title='new message')
                     //-         +i name='envelope'
                     if is_current_user
-                        a.ui.icon.large.button.logout(href="#" title='logout')
-                            +i name='exit-sign'
-                        a.ui.icon.large.button.logout_other_clients(href="#" title='logout other clients')
-                            +i name='feed-out'
+                        a.ui.large.button.logout(href="#" title='logout')
+                            +i name='exit-sign' classes='ui inline mini image'
+                            |log out
+                        a.ui.large.button.logout_other_clients(href="#" title='logout other clients')
+                            +i name='feed-out' classes='ui inline mini image'
+                            |log out other clients
                     if is_admin
                         .ui.basic.segment
                             .ui.header 
