alpha true/false voting

--- a/client/dashboard.jade
+++ b/client/dashboard.jade
@@ -166,7 +166,7 @@ template(name='games')
 //-                     i.food.icon
 //-                     |top selling food
 //-                 .ui.header 
-//-                     i.tags.icon
+//-                     +ismall name='tags' classes='ui inline image'
 //-                     |top selling tags
 //-             .four.wide.column
 //-                 +todays_stats
