--- a/client/fields.jade
+++ b/client/fields.jade
@@ -684,7 +684,7 @@ template(name='array_view')
         //-     else
         //-         |#{this}
         each field_value
-            .ui.large.basic.label #{this}
+            .ui.large.label #{this}
 
 
 template(name='children_edit')
