--- a/components/commerce/shop_dashboard.jade
+++ b/components/commerce/shop_dashboard.jade
@@ -80,7 +80,7 @@ template(name='shop_dashboard')
                     //- .four.wide.column
                     //-     .ui.segment
                     //-         .ui.header 
-                    //-             i.tags.icon
+                    //-             +ismall name='tags' classes='ui inline image'
                     //-             |top grossing tags
                     //- .four.wide.column
                     //-     .ui.segment
