--- a/components/delta/model_doc.jade
+++ b/components/delta/model_doc.jade
@@ -7,7 +7,7 @@ template(name='model_doc_edit')
                         |edit #{model}
                     +creation_info
                     a.ui.big.icon.basic.button(href="/m/#{current_model.slug}/#{_id}/view")
-                        i.big.checkmark.icon
+                        i.big.checkmark.green.icon
                     #delete_doc.ui.icon.basic.button
                         i.red.trash.icon
                     if is_user
