--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -1,34 +1,32 @@
 template(name='comments')
-    .ui.fluid.accordion
-        .active.title
-            .ui.header
-                +i name='chat'
-                |comments
-        .active.content
-            if currentUser
-                .ui.fluid.icon.transparent.input
-                    i.plus.icon
-                    input.add_comment(model='text' placeholder='add comment')
-            .ui.comments
-                each doc_comments
-                    .comment
-                        .content
-                            .ui.header #{body}
-                            .meta #{when}
-                                |by 
-                                a(href="/user/#{author.username}") #{author.first_name} #{author.last_name}
-                                +voting
-                                +remove_button
+    .ui.header
+        +i name='chat'
+        |comments
+    if currentUser
+        .ui.fluid.icon.input
+            i.plus.icon
+            input.add_comment(model='text' placeholder='add comment')
+    .ui.comments
+        each doc_comments
+            .comment
+                .content
+                    .ui.header #{body}
+                    .meta #{when}
+                        |by 
+                        a(href="/user/#{author.username}") #{author.first_name} #{author.last_name}
+                        +voting
+                        +remove_button
 
 
 template(name='viewing')
-    .ui.header viewed by
+    div
+    .ui.inline.header viewed by
     unless viewed_by
         .ui.button.mark_read
-            |mark read
+            +ismall name='hide'
     else 
         .ui.button.mark_unread
-            |mark read
+            +ismall name='visible'
     each viewers
         +user_info
 
