--- a/components/votes.jade
+++ b/components/votes.jade
@@ -34,7 +34,7 @@ template(name='votes')
         .row
             .six.wide.column
                 .ui.inline.header 
-                    +i name='road-worker' classes='ui avatar image'
+                    +i name='elections' classes='ui avatar image'
                     |votes
                 .ui.big.icon.button.add_vote(title='add vote')
                     i.plus.icon
@@ -53,12 +53,7 @@ template(name='vote_card_template')
                 +i name=icon
             |#{title}
         |!{description}
-        |complete
-        if complete
-            i.large.checkmark.icon(title='complete')
-        else
-            i.large.circle.outline.icon(title='incomplete')
-        i.tags.icon
+        +ismall name='tags' classes='ui inline image'
         each tags
             .ui.basic.label #{this}
         div
@@ -92,11 +87,13 @@ template(name='vote_edit')
                     +remove_button
                     +icon_edit key='icon' label='icon' direct=true
                     +array_edit key='tags' label='tags' icon='tags' direct=true
-                .twelve.wide.column 
+                .six.wide.column 
                     +text_edit key='title' label='title' icon='title' direct=true
                     +image_edit key='image' label='image' icon='image' direct=true
                     +html_edit key='description' label='description' icon='content' direct=true
                     +activity
+                .six.wide.column
+                    +boolean_edit key='true_false' label='true/false' direct=true 
                      
 template(name='vote_view')
     with current_doc
@@ -104,7 +101,7 @@ template(name='vote_view')
             .row
                 .sixteen.wide.column 
                     a.ui.icon.button(href="/votes" title='view votes')
-                        +i name='road-worker' classes='ui avatar image'
+                        +i name='elections' classes='ui avatar image'
                     .ui.inline.header
                         if icon
                             +i name=icon
@@ -118,14 +115,30 @@ template(name='vote_view')
                     +image_view key='image' icon='image' label='image' direct=true
                     +voting_full
                     +viewing
+                .six.wide.column
+                    .ui.header options
+                    if true_false
+                        .ui.two.column.grid
+                            .column
+                                .ui.massive.icon.fluid.button.vote_yes
+                                    i.thumbs.up.green.big.outline.icon 
+                            .column
+                                .ui.massive.icon.fluid.button.vote_no
+                                    i.thumbs.down.red.big.outline.icon 
+                    each votes
+                        .ui.segment
+                            .ui.header vote
+                            .ui.header value #{value}
                 .six.wide.column 
                     .ui.header 
                         +i name='rss'
                         |activity
-                    +activity
-                .six.wide.column 
+                    each log_items
+                        +log_item
                     +comments
 
+template(name='log_item')
+    .ui.header #{text}
 
 
 
